trunk/Archive2/a9/7aae11dc8e968e/output
main.cpp:5:22: error: expected the class name after '~' to name a destructor
    p->std::string::~string();
                     ^
1 error generated.
