trunk/Archive2/a9/7aae11dc8e968e/main.cpp
#include <iostream>

int main() {
    std::string* p = new std::string("Destruct me");
    p->std::string::~string();
}